Updated SecurityConfig.java