@@ -14,6 +14,9 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.List;
 import java.util.Arrays;
+import java.util.ArrayList;
+
+import org.springframework.http.HttpMethod;
 
 @Configuration
 @EnableWebSecurity
@@ -28,11 +31,14 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
         // Allow frontend origin(s) from environment variable FRONTEND_URL (comma-separated),
-        // otherwise default to localhost for local development.
+        // and fall back to the deployed Vercel origin plus localhost for local development.
         String frontendEnv = System.getenv("FRONTEND_URL");
-        List<String> allowedOrigins = (frontendEnv != null && !frontendEnv.isBlank())
-            ? Arrays.asList(frontendEnv.split(","))
-            : List.of("http://localhost:5173");
+        List<String> allowedOrigins = new ArrayList<>();
+        if (frontendEnv != null && !frontendEnv.isBlank()) {
+            allowedOrigins.addAll(Arrays.asList(frontendEnv.split(",")));
+        }
+        allowedOrigins.add("http://localhost:5173");
+        allowedOrigins.add("https://grab-n-go-xi.vercel.app");
         config.setAllowedOrigins(allowedOrigins);
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
@@ -48,6 +54,7 @@ public class SecurityConfig {
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .csrf(AbstractHttpConfigurer::disable)
             .authorizeHttpRequests(auth -> auth
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                 .requestMatchers("/api/auth/**").permitAll()
                 .requestMatchers("/api/admin/**").permitAll()
                 .requestMatchers("/api/meals/**").permitAll()
